--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
     { "name": "Michael Schaar"}
   ],
   "repositories": [
-  ],
+    {
+        "type": "vcs",
+        "url":  "git@github.com:phore/phore-asn-der.git"
+    }
+],
   "require": {
     "php": ">=7.2"
   },
@@ -21,6 +25,7 @@
   },
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "*"
+    "phpunit/phpunit": "*",
+    "phore/phore-asn-der": "*"
   }
 }
