--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     }
 ],
   "require": {
-    "php": ">=7.2"
+    "php": ">=7.2",
+    "ext-json": "*",
+    "ext-openssl": "*"
   },
   "suggest": {
   },
