--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
   "autoload": {
     "psr-4": {
       "Phore\\JWT\\": "src/"
-    }
+    },
+    "files": [
+      "src/functions.php"
+    ]
   },
   "minimum-stability": "dev",
   "require-dev": {
