--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
   "require": {
     "php": ">=7.2",
     "ext-json": "*",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "phore/cache": "dev-master",
+    "phore/http-client": "dev-master",
+    "phore/objectstore": "dev-master"
   },
   "suggest": {
   },
